--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ button,
 input {
     font-family: Ubuntu, Helvetica, Arial, sans-serif;
     padding: 0.4rem;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 #home {
@@ -41,13 +41,17 @@ input {
     width: 60%;
 }
 
+.main {
+    min-height: 400px;
+}
+
 #numbers {
     clear: both;
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
     justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
 }
 
 ul {
@@ -56,7 +60,6 @@ ul {
     flex-direction: row;
     flex-flow: wrap;
     justify-content: space-evenly;
-    align-items: center;
 }
 
 li {
@@ -67,6 +70,7 @@ li {
     background-position: center;
     font-weight: bolder;
     padding: 2rem 1.5rem 2rem 1.5rem;
+    font-size: 1.1rem;
 }
 
 /*************************************************
@@ -107,7 +111,7 @@ button {
     border: 5px solid hsl(142, 70%, 40%);
     border-radius: 15px;
     border-width: medium;
-    -webkit-transition-duration: 0.5s;
+    -webkit-transition-duration: 1s;
     transition-duration: 1s;
 }
 
@@ -119,9 +123,13 @@ button:hover {
 #digits {
     font-size: 1rem;
     color: hsl(1, 0%, 30%);
-    box-shadow: 2px 2px 3px 0 hsl(1, 0%, 30%);
+    box-shadow: 2px 2px 3px 1px hsl(1, 0%, 50%);
 }
 
+.results,
+.main {
+    min-height: calc(100vh - 180px);
+}
 
 
 /*************************************************
@@ -129,35 +137,87 @@ button:hover {
 *************************************************/
 footer {
     background-image: linear-gradient(hsl(1, 0%, 60%), hsl(1, 0%, 95%), hsl(1, 0%, 60%));
-    font-size: 1.2rem;
-    padding: 0.8rem;
+    font-size: 1.3rem;
     padding: 1rem 2rem;
     width: 100%;
+    height: 66px;
 }
+
 
 /*************************************************
             MEDIA QUERIES for layout
 *************************************************/
 @media (max-width: 599px) {
 
-    button {
-        
+    header > h1 {
+        font-size: 2.8rem;
     }
 
+    li {
+        background-size: 50px;
+        padding: 2rem 1.4rem 2rem 1.4rem;
+        font-size: 1.1rem;
+    }
+
+    label,
+    span {
+        font-size: 1.1rem;
+    }
+
+    .results,
+    .main {
+        min-height: calc(100vh - 180px);
+    }
 }
 
 @media (min-width: 600px) and (max-width:999px) {
 
-    button {
-
+    header > h1 {
+        font-size: 3rem;
     }
 
+    li {
+        background-size: 75px;
+        padding: 2rem 2rem 2rem 2rem;
+        font-size: 2rem;
+    }
+
+    button,
+    label,
+    span {
+        font-size: 1.2rem;
+    }
+
+    .results,
+    .main {
+        min-height: calc(100vh - 184px);
+    }
 }
 
 @media (min-width: 1000px) {
 
-    button {
-
+    header > h1 {
+        font-size: 3.2rem;
     }
 
+    li {
+        background-size: 100px;
+        padding: 2rem 3rem 2rem 3rem;
+        font-size: 2.5rem;
+    }
+
+    .mainList2 {
+        width: 50%;
+    }
+
+    button,
+    label,
+    span {
+        font-size: 1.3rem;
+    }
+
+    .results,
+    .main {
+        min-height: calc(100vh - 188px);
+    }
 }
