--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ ul {
 
 li {
     list-style: none;
-    background-image: url("img/ball.png");
+    background-image: url("/img/ball.png");
     background-repeat: no-repeat;
     background-size: 50px;
     background-position: center;
@@ -91,7 +91,7 @@ li {
 *************************************************/
 header {
     padding: 1rem 2rem;
-    background-image: url("img/HDBG.png");
+    background-image: url("/img/HDBG.png");
     background-size: contain;
     border-top: var(--bd-top);
 }
