--- a/css/main.css
+++ b/css/main.css
@@ -151,8 +151,8 @@ button:hover {
 *************************************************/
 footer {
     background-image: linear-gradient(hsl(1, 0%, 60%), hsl(1, 0%, 95%), hsl(1, 0%, 60%));
-    font-size: 1.3rem;
-    padding: 1rem 2rem;
+    font-size: 1.2rem;
+    padding: 1rem;
     width: 100%;
     height: 66px;
 }
@@ -182,6 +182,10 @@ footer {
     .main {
         min-height: calc(100vh - 180px);
     }
+
+    footer {
+        font-size: 1.2rem;
+    }
 }
 
 @media (min-width: 600px) and (max-width:999px) {
@@ -205,6 +209,10 @@ footer {
     .results,
     .main {
         min-height: calc(100vh - 184px);
+    }
+
+    footer {
+        font-size: 1.3rem;
     }
 }
 
@@ -233,5 +241,9 @@ footer {
     .results,
     .main {
         min-height: calc(100vh - 188px);
+    }
+
+    footer {
+        font-size: 1.4rem;
     }
 }
